--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/the.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thetirage - Jeu-Concours Snapchat Mensuel</title>
+    <title>Thetirage - Jeu Concours Mensuel</title>
     <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
   </head>
   <body>
