--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <link rel="icon" type="image/png" href="/the.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thetirage - Jeu Concours Mensuel</title>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17559923575"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-17559923575');
+    </script>
     <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
   </head>
   <body>
