--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
       gtag('config', 'AW-17559923575');
     </script>
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5280795861742271"
+         crossorigin="anonymous"></script>
     <script async src="https://js.stripe.com/v3/pricing-table.js"></script>
   </head>
   <body>
